# Nexora

sistema_whatsapp_nexora___automatizacion_restaurantes_buenos_aires_v1_crewai-project/: README.md  app.py  privacy.html  pyproject.toml  requirements.txt
sistema_whatsapp_nexora___automatizacion_restaurantes_buenos_aires_v1_crewai-project/src/sistema_whatsapp_nexora___automatizacion_restaurantes_buenos_aires/: crew.py  main.py
sistema_whatsapp_nexora___automatizacion_restaurantes_buenos_aires_v1_crewai-project/src/sistema_whatsapp_nexora___automatizacion_restaurantes_buenos_aires/config/: agents.yaml  tasks.yaml
sistema_whatsapp_nexora___automatizacion_restaurantes_buenos_aires_v1_crewai-project/src/sistema_whatsapp_nexora___automatizacion_restaurantes_buenos_aires/tools/: deployment_files_generator.py  restaurant_conversation_handler.py  whatsapp_messenger.py
